# FIDESlib-Metal

./: .gitignore  CMakeLists.txt  README.md
api/: CCParams.cpp  CCParams.hpp  Ciphertext.cpp  Ciphertext.hpp  CryptoContext.cpp  CryptoContext.hpp  GenCryptoContext.cpp  Serialize.cpp
bench/: Benchmark.cu  Benchmark.cuh  BootstrapBenchmarks.cu  CiphertextAddBenchmarks.cu  CiphertextModUpModDownBenchmarks.cu  CiphertextMultiplicationBenchmarks.cu  CiphertextRotationBenchmarks.cu  ContextBenchmarks.cu  LimbBatchAddSubBenchmarks.cu  LimbNTTBenchmarks.cu  MatrixVectorMultiplicationBenchmarks.cu  PlaintextMultiplicationBenchmarks.cu  RNSPolyAdditionBenchmarks.cu  RNSPolyModUpModDownBenchmarks.cu  RNSPolyRescaleBenchmarks.cu
cmake/: Metal.cmake  fideslibConfig.cmake.in
docker/: Dockerfile.NVIDIA  README.md
examples/bert-tiny/: CMakeLists.txt
examples/bert-tiny/main/: berttiny-all.cu  berttiny-simple.cu
examples/bert-tiny/src/: Inputs.cu  Inputs.cuh  MatMul.cu  MatMul.cuh  MatMul.h  PolyApprox.cu  PolyApprox.cuh  Transformer.cu  Transformer.cuh  Transpose.cu  Transpose.cuh  utils.cu  utils.cuh
examples/bert-tiny/src/python/: ExtractEmbeddings.py  ExtractEmbeddings_pair.py  save_weights.py
examples/bert-tiny/test/: BERTTinyTests.cu  MMTests.cu  ParametrizedTest.cuh  PolyApproxTests.cu  TTests1.cu
examples/bootstrap/src/: bootstrap.cpp
examples/hpca/src/: 04_optimizations.cpp
examples/logreg/: CMakeLists.txt
examples/logreg/src/: data.cpp  data.hpp  fhe.cpp  fhe.hpp  main.cpp
examples/resnet/src/: controller.cpp  controller.hpp  main.cpp
examples/simple/: CMakeLists.txt
other/: GPUTest.cpp
src/: AddSub.cu  AddSub.cuh  ConstantsGPU.cu  ConstantsGPU.cuh  CudaUtils.cu  CudaUtils.cuh  LimbUtils.cuh  LogUtil.hpp  Math.cu  Math.cuh  ModMult.cu  ModMult.cuh  NTT.cu  NTT.cuh  NTTfusions.cuh  NTThelper.cuh  PeerUtils.cu  PeerUtils.cuh  PolyApprox.cu  PolyApprox.cuh  Rotation.cu  Rotation.cuh  VectorGPU.cu  VectorGPU.cuh  parallel_for.cpp  parallel_for.hpp
src/CKKS/: AccumulateBroadcast.cu  AccumulateBroadcast.cuh  ApproxModEval.cu  ApproxModEval.cuh  Bootstrap.cu  Bootstrap.cuh  BootstrapPrecomputation.cuh  Ciphertext.cpp  Ciphertext.cuh  CoeffsToSlots.cu  CoeffsToSlots.cuh  Context.cu  Context.cuh  Conv.cu  Conv.cuh  ElemenwiseBatchKernels.cu  ElemenwiseBatchKernels.cuh  KeySwitchingKey.cu  KeySwitchingKey.cuh  Limb.cu  Limb.cuh  LimbPartition.cu  LimbPartition.cuh  LimbPartitionBatch.cu  LimbPartitionMGPU.cu  LinearTransform.cu  LinearTransform.cuh  Parameters.cu  Parameters.cuh  Plaintext.cu  Plaintext.cuh  RNSPoly.cpp  RNSPoly.cuh  RNSPolyBatch.cpp  Rescale.cu  Rescale.cuh  forwardDefs.cuh
src/CKKS/openfhe-interface/: ParameterSwitch.cu  ParameterSwitch.cuh  RawCiphertext.cu  RawCiphertext.cuh
src/Metal/: MetalAddSub.metal  MetalBuffer.hpp  MetalBuffer.mm  MetalConv.metal  MetalDevice.hpp  MetalDevice.mm  MetalElemWise.metal  MetalLauncher.hpp  MetalLauncher.mm  MetalMath.hpp  MetalMathTest.cpp  MetalMemoryPool.hpp  MetalMemoryPool.mm  MetalModMult.metal  MetalNTT.metal  MetalNTTFusion.metal  MetalRotation.metal  MetalSample.cpp  MetalStream.hpp  MetalStream.mm  MetalTest.cpp  fideslib_metal.metallib  paper.tex
src/Metal/samples/: README.md  benchmark.cpp  bmi_calculator.cpp  ckks_basics.cpp  modular_arithmetic.cpp  ntt_example.cpp  rotation_example.cpp
test/: BaseTests.cu  LimbKernelTest.cu  MathTest.cu  NTTtests.cu  NegacyclicNTTtests.cu  OpenFheInterfaceTests.cu  ParametrizedTest.cuh  PeerUtilsTests.cu  RotationTests.cu  cpuNTT.cpp  cpuNTT.hpp  cpuNTT_nega.cpp  cpuNTT_nega.hpp
